--- a/package.json
+++ b/package.json
@@ -1,62 +1,24 @@
 {
-  "name": "my site",
-  "version": "0.1.0",
-  "private": true,
-  "author": "Кошевой Руслан",
-  "homepage": "",
-  "devDependencies": {
-    "autoprefixer": "^6.4.1",
-    "browser-sync": "^2.15.0",
-    "css-mqpacker": "^5.0.1",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-csso": "^2.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-less": "3.3.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-svgmin": "^1.2.3",
-    "gulp-svgstore": "^6.1.0",
-    "gulp-uglify": "^2.0.0",
-    "imagemin-optipng": "^5.2.1",
-    "imagemin-pngquant": "^5.0.0",
-    "run-sequence": "^1.2.2"
-  },
-  "scripts": {
-    "test": "editorconfig-cli",
-    "build": "gulp build",
-    "start": "npm run build && gulp serve"
-  },
-  "editorconfig-cli": [
-    "*.html",
-    "*.json",
-    "*.js",
-    "js/**/*.js",
-    "img/**/*.svg",
-    "less/**/*.{less,scss}"
-  ],
-  "engines": {
-    "node": "6.5"
-  },
+  "name": "darkslot",
+  "version": "1.0.0",
+  "description": "",
   "main": "gulpfile.js",
-  "dependencies": {
-    "autoprefixer": "^6.4.1",
-    "browser-sync": "^2.15.0",
-    "css-mqpacker": "^5.0.1",
-    "del": "^2.2.2",
-    "gulp-csso": "^2.0.0",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp": "^3.9.1",
-    "gulp-svgmin": "^1.2.3",
-    "gulp-svgstore": "^6.1.0",
-    "imagemin-optipng": "^5.2.1",
-    "plumber": "^0.4.8",
-    "run-sequence": "^1.2.2"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rkoshevoy/darkslot.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rkoshevoy/darkslot/issues"
+  },
+  "homepage": "https://github.com/rkoshevoy/darkslot#readme",
+  "devDependencies": {
+    "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
+  }
 }
